--- a/demo/App.module.scss
+++ b/demo/App.module.scss
@@ -5,4 +5,17 @@
   align-items: flex-start;
   height: 100%;
   width: 100%;
+  border: 1px solid #454545;
+
+  .Header {
+    border: 1px solid #454545;
+    border-style: none solid solid none;
+    box-shadow: 0.02em 0.02em 0.5em #efefef;
+    background-color: #efefef;
+  }
+
+  .Cell {
+    border: 1px solid #efefef;
+    box-shadow: 0.02em 0.02em 0.5em #efefef inset;
+  }
 }
