--- a/src/Table.module.scss
+++ b/src/Table.module.scss
@@ -7,7 +7,11 @@
   width: 100%;
   min-width: 100%;
   overflow: hidden;
-  max-height: 100%;
+  max-height: calc(100% - 0px);
+
+  .PreventSelect {
+    user-select: none;
+  }
 
   .TableRow {
     display: flex;
@@ -74,6 +78,44 @@
     table-layout: fixed;
 
     tr {
+      td {
+        // margin: 0px !important;
+        // padding: 0px !important;
+        // .CellContent {
+        //   display: flex;
+        //   border: 1px solid red;
+        //   margin: 0px;
+        //   padding: 0px;
+        //   height: 100%;
+        //   width: 100%;
+        //   .Handle {
+        //     content: "";
+        //     position: relative;
+        //     display: block;
+        //     width: 5px;
+        //     height: 5px;
+        //     background-color: red;
+        //     margin-left: auto;
+        //     margin-top: auto;
+        //     margin-bottom: auto;
+        //   }
+        // }
+        // .Handle {
+        //   display: block;
+        //   position:absolute;
+        //   z-index: 300;
+        //   display: block;
+        //   width: 50px;
+        //   height: 50px;
+        //   background-color: red;
+        //   // margin-left: auto;
+        //   // margin-top: auto;
+        //   // margin-bottom: auto;
+        //   &:hover {
+        //     cursor: grab;
+        //   }
+        // }
+      }
       .Cell {
         margin: 0px;
         padding: 0px;
