--- a/src/Table.module.scss
+++ b/src/Table.module.scss
@@ -1,4 +1,5 @@
 .Table {
+
   display: flex;
   flex-direction: column;
   margin: 0px;
@@ -7,7 +8,9 @@
   width: 100%;
   min-width: 100%;
   overflow: hidden;
+  height: calc(100% - 0px);
   max-height: calc(100% - 0px);
+  min-height: calc(100% - 0px);
 
   .PreventSelect {
     user-select: none;
@@ -30,7 +33,7 @@
       }
 
       .T2Container {
-        display: flex;
+        display: block;
         flex-shrink: 0;
         flex-grow: 1;
         overflow: hidden;
@@ -54,17 +57,12 @@
       }
 
       .T4Container {
-        display: flex;
+        display: block;
         flex-shrink: 0;
         flex-grow: 1;
         overflow: hidden;
         overflow-x: scroll;
         height: 100%;
-
-        .T4 {
-          flex-shrink: 0;
-          flex-grow: 1;
-        }
       }
     }
   }
@@ -77,58 +75,19 @@
     padding: 0px;
     table-layout: fixed;
 
-    tr {
-      td {
-        // margin: 0px !important;
-        // padding: 0px !important;
-        // .CellContent {
-        //   display: flex;
-        //   border: 1px solid red;
-        //   margin: 0px;
-        //   padding: 0px;
-        //   height: 100%;
-        //   width: 100%;
-        //   .Handle {
-        //     content: "";
-        //     position: relative;
-        //     display: block;
-        //     width: 5px;
-        //     height: 5px;
-        //     background-color: red;
-        //     margin-left: auto;
-        //     margin-top: auto;
-        //     margin-bottom: auto;
-        //   }
-        // }
-        // .Handle {
-        //   display: block;
-        //   position:absolute;
-        //   z-index: 300;
-        //   display: block;
-        //   width: 50px;
-        //   height: 50px;
-        //   background-color: red;
-        //   // margin-left: auto;
-        //   // margin-top: auto;
-        //   // margin-bottom: auto;
-        //   &:hover {
-        //     cursor: grab;
-        //   }
-        // }
-      }
-      .Cell {
-        margin: 0px;
-        padding: 0px;
-        text-align: left;
-        vertical-align: top;
+    .Cell {
+      margin: 0px;
+      padding: 0px;
+      text-align: left;
+      vertical-align: top;
+      text-overflow: ellipsis;
+      box-sizing: border-box !important;
+      box-shadow: -1.98em 5.06em 5em 0.05em #efefef inset;
+      max-height: fit-content;
+
+      &.Head {
         text-overflow: ellipsis;
         box-sizing: border-box !important;
-
-        &.Head {
-          text-overflow: ellipsis;
-          box-sizing: border-box !important;
-          // text-wrap: wrap;
-        }
       }
     }
   }
