--- a/src/Table.module.scss
+++ b/src/Table.module.scss
@@ -3,13 +3,14 @@
   flex-direction: column;
   margin: 0px;
   padding: 0px;
-  max-width: 100%;
+  max-width: 100svw;
   width: 100%;
   min-width: 100px;
   overflow: hidden;
   height: calc(100% - 0px);
   max-height: calc(100% - 0px);
   min-height: calc(100% - 0px);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 
   .PreventSelect {
     user-select: none;
@@ -21,7 +22,7 @@
     justify-content: flex-start;
     margin: 0px;
     padding: 0px;
-    max-width: 100%;
+    max-width: 100vw;
     min-width: 100%;
     width: 100%;
     text-overflow: ellipsis;
@@ -75,6 +76,14 @@
     margin: 0px;
     padding: 0px;
     table-layout: fixed;
+
+    .AddressCell {
+      box-sizing: border-box !important;
+      border: 0.005rem solid #000000;
+      border-style: none solid solid none;
+      box-shadow: -1.98em 5.06em 5em 0.05em #454545 inset;
+      background-color: black;
+    }
 
     .Cell {
       margin: 0px;
